backport: re PR middle-end/46734 (ICE in create_tmp_var, at gimplify.c:505)

2010-12-21  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline:
	2010-12-09  Martin Jambor  <mjambor@suse.cz>

	PR middle-end/46734
	* tree-sra.c (splice_param_accesses): Check that there are not
	multiple ADDRESSABLE types.

	* testsuite/g++.dg/tree-ssa/pr46734.C: New test.

From-SVN: r168109